--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,9 +1,14 @@
+
 // "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
 // For fixed header
 // body { padding-top: 70px; }
+
+.nav-tabs {
+	margin: 1em 0;
+}
 
 .vote-box {
 	position: absolute;
