--- a/app/views/admin/controllers/new.html.erb
+++ b/app/views/admin/controllers/new.html.erb
@@ -1,14 +1,15 @@
-
-<div class="row">
-	<ol class="breadcrumb">
-	  <li><%= link_to "Admin", admin_controllers_path %></li>
-	  <li><%= link_to "Controllers", admin_controllers_path %></li>
-	  <li class="active">New</li>
-	</ol>
-</div>
-<div class="row">
-	<h1>Admin Panel <small>New Controller</small></h1>
-</div>
-<div class="row">
-	<%= render partial: 'form' %>
+<div class="container">
+	<div class="row">
+		<ol class="breadcrumb">
+		  <li><%= link_to "Admin", admin_controllers_path %></li>
+		  <li><%= link_to "Controllers", admin_controllers_path %></li>
+		  <li class="active">New</li>
+		</ol>
+	</div>
+	<div class="row">
+		<h1>Admin Panel <small>New Controller</small></h1>
+	</div>
+	<div class="row">
+		<%= render partial: 'form' %>
+	</div>
 </div>
