--- a/app/views/mappings/index.html.erb
+++ b/app/views/mappings/index.html.erb
@@ -1,4 +1,8 @@
-<h1>Search Mappings <small><%= "by #{@user.name}" if @user %></small></h1>
+<div class="container">
+	
 
-<%= render 'shared/mappings' %>
+	<h1>Search Mappings <small><%= "by #{@user.name}" if @user %></small></h1>
+
+	<%= render 'shared/mappings' %>
+</div>
 
