--- a/app/views/admin/controllers/_form.html.erb
+++ b/app/views/admin/controllers/_form.html.erb
@@ -10,12 +10,12 @@
 			<%= f.file_field :avatar, class: 'form-control' %>
 		</div>
 		<div class="form-group">
-			<%= f.button class: 'form-control btn btn-success' %>
+			<%= f.button class: 'form-control btn btn-primary' %>
 		</div>
 		<% end %>
 	</div>
 	<div class="col-md-4">
-		<div class="panel panel-success">
+		<div class="panel panel-primary">
   		<div class="panel-heading">Controller</div>
   		<div class="panel-body">
   			<p>Aspects of a Controller</p>
