--- a/app/views/admin/softwares/_form.html.erb
+++ b/app/views/admin/softwares/_form.html.erb
@@ -6,12 +6,12 @@
 			<%= f.text_field :name, required: true, class: 'form-control' %>
 		</div>
 		<div class="form-group">
-			<%= f.button class: 'form-control btn btn-success' %>
+			<%= f.button class: 'form-control btn btn-primary' %>
 		</div>
 		<% end %>
 	</div>
 	<div class="col-md-4">
-		<div class="panel panel-success">
+		<div class="panel panel-primary">
   		<div class="panel-heading">Software</div>
   		<div class="panel-body">
   			<p>Aspects of a Software</p>
