--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-static-top" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
   <div class="container">
 		<!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -8,7 +8,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-     <%= link_to 'Mapwork', root_path, class: 'navbar-brand' %>
+      <div class="navbar-brand">
+        <span class="glyphicon glyphicon-map-marker"></span>
+        <%= link_to 'Mapwork', root_path %>
+      </div>
+     
     </div>
 		<!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="navbar-collapse">
@@ -16,13 +20,15 @@
 				
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="<%= 'active' if params[:controller].include? 'mappings' %>"><%= link_to 'Search Mappings', mappings_path %></li>
+        <li class="<%= 'active' if params[:controller].include?('mappings') && params[:action] == 'index'  %>"><%= link_to 'Search Mappings', mappings_path %></li>
 				<% if logged_in? %>
+          <li class="<%= 'active' if params[:controller].include?("mappings") && params[:action] == 'new' %>"><%= link_to 'New Mapping', new_mapping_path %></li>
+          <li class="<%= 'active' if params[:controller] == "users" && params[:action] == "show" && params[:id] == @current_user.id.to_s %>"><%= link_to "My Profile", user_path(@current_user) %></li>
           <% if @current_user.admin %>
             <li class="<%= 'active' if params[:controller].include? 'admin' %>"><%= link_to 'Admin Panel', admin_controllers_path %></li>
           <% end %>
-          <li><%= link_to 'New Mapping', new_mapping_path %></li>
 					<li><%= link_to 'Logout', logout_path %></li>
+
 				<% else %>
 					<li><%= link_to 'Sign Up', new_user_path %></li>
 					<li><%= link_to 'Login', login_path %></li>
