--- a/app/views/mappings/_form.html.erb
+++ b/app/views/mappings/_form.html.erb
@@ -34,7 +34,7 @@
 		<%= f.url_field :url, class: 'form-control' %>
 	</div>
 	<div class="form-group">
-		<%= f.submit class: 'btn btn-success btn-block' %>	
+		<%= f.submit class: 'btn btn-primary btn-block btn-lg' %>	
 	</div>
 	
 <% end %>
