--- a/app/views/mappings/index.html.erb
+++ b/app/views/mappings/index.html.erb
@@ -1,8 +1,9 @@
+<div class="page-heading-box">
+	<div class="container">
+		<h1>Mappings <small>/ Search <%= "by #{@user.name}" if @user %></small></h1>
+	</div>
+</div>
 <div class="container">
-	
-
-	<h1>Search Mappings <small><%= "by #{@user.name}" if @user %></small></h1>
-
 	<%= render 'shared/mappings' %>
 </div>
 
