--- a/app/views/mappings/new.html.erb
+++ b/app/views/mappings/new.html.erb
@@ -1,15 +1,15 @@
-<div class="container">
-	<div class="row">
-		<div class="page-header">
-	  	<h1>Mappings <small>New Mapping</small></h1>
-		</div>
+<div class="page-heading-box">
+	<div class="container">
+	  <h1>Mappings <small>/ New Mapping</small></h1>
 	</div>
+</div>
+<div class="container">
 	<div class="row">
 		<div class="col-md-8">
 			<%= render 'form' %>
 		</div>
 		<div class="col-md-4">
-			<div class="panel panel-success">
+			<div class="panel panel-primary">
 	  		<div class="panel-heading">Mappings</div>
 	  		<div class="panel-body">
 	  			<p>Mapping Form Glossary</p>
