--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,15 +1,41 @@
+<% if @user.errors.any? %>
+	<% @user.errors.full_messages.each do |msg| %>
+
+		<div class="alert alert-danger alert-dismissible" role="alert">
+			<button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+			<%= msg %>
+		</div>
+	<% end %>
+<% end %>
+
 <%= form_for @user do |f| %>
-	<%= f.label :name %>
-	<%= f.text_field :name, required: true %>
+
+	<div class="form-group">
+		<%= f.label :name %>
+		<%= f.text_field :name, required: true, class: 'form-control' %>
+	</div>
+
+		<div class="form-group">
+			<%= f.label :avatar %>
+			<%= f.file_field :avatar, class: 'form-control' %>
+		</div>
 	
-	<%= f.label :email %>
-	<%= f.email_field :email, required: true %>
+	<div class="form-group">
+		<%= f.label :email %>
+		<%= f.email_field :email, required: true, class: 'form-control' %>	
+	</div>
+	
+	<div class="form-group">
+		<%= f.label :password %>
+		<%= f.password_field :password, required: true, class: 'form-control' %>		
+	</div>
 
-	<%= f.label :password %>
-	<%= f.password_field :password, required: true %>
-
-	<%= f.label :password_confirmation %>
-	<%= f.password_field :password_confirmation, required: true %>
-
-	<%= f.submit %>
+	<div class="form-group">
+		<%= f.label :password_confirmation %>
+		<%= f.password_field :password_confirmation, required: true, class: 'form-control' %>		
+	</div>
+	
+	<div class="form-group">
+			<%= f.submit class: 'btn btn-primary btn-block'%>
+	</div>
 <% end %>
