--- a/app/views/shared/_video.html.erb
+++ b/app/views/shared/_video.html.erb
@@ -3,6 +3,6 @@
     <h3 class="panel-title">Video for <%= title %></h3>
   </div>
   <div class="panel-body center-block text-center">
-    <iframe width="640" height="360" src="//www.youtube.com/embed/<%= url %>" frameborder="0" allowfullscreen></iframe>
+    <iframe width="640" height="360" src="//www.youtube.com/embed/<%= video %>" frameborder="0" allowfullscreen></iframe>
   </div>
 </div>
