--- a/app/views/mappings/_form.html.erb
+++ b/app/views/mappings/_form.html.erb
@@ -27,7 +27,7 @@
 	</div>
 	<div class="form-group">
 		<%= f.label :video, 'Youtube video URL' %>
-		<%= f.url_field :video, class: 'form-control' %>
+		<%= f.text_field :video, class: 'form-control' %>
 	</div>
 	<div class="form-group">
 		<%= f.label :url, 'Download URL'%>
