--- a/app/views/mappings/show.html.erb
+++ b/app/views/mappings/show.html.erb
@@ -6,7 +6,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-8">
-			<%= render 'shared/video', :url => @mapping.url, :title => @mapping.name %>
+			<%= render 'shared/video', :url => @mapping.video, :title => @mapping.name %>
 			<%= render 'mappings/description', :mapping => @mapping %>
 			
 		</div>
