add default rep

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -36,7 +36,7 @@
 							Total Reputation
 						</div>
 						<div class="panel-body text-center">
-							<p><h1 class="text-primary"><strong><%= @user.reputation %></strong></h1></p>
+							<p><h1 class="text-primary"><strong><%= @user.reputation || 0 %></strong></h1></p>
 							<p><h3 class="text-muted">Reputation</h3></p>
 						</div>
 					</div>
